--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,14 @@ __pycache__/
 .Python
 env/
 venv/
+.venv/
+.venv311/
 ENV/
 env.bak/
 venv.bak/
+
+# 缓存文件
+edge_tts_voices_cache.json
 
 # PyInstaller
 *.manifest
