--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,17 @@ requests>=2.25.0
 qrcode>=7.0
 aiohttp>=3.12.0
 plyer>=2.1.0
+pyttsx3>=2.90
+edge-tts>=6.1.12
+soundfile>=0.12.1
+numpy>=1.24
+kokoro>=0.9.4
+ordered-set>=4.1.0
+pypinyin>=0.55.0
+pypinyin-dict>=0.9.0
+cn2an>=0.5.23
+jieba>=0.42.1
+
 
 # 底层依赖
 websockets>=10.0
